[gd_scene load_steps=10 format=2]

[ext_resource path="res://ants/Sprite-0002.png" type="Texture" id=1]
[ext_resource path="res://ants/ant.gd" type="Script" id=2]
[ext_resource path="res://ants/Area2D.gd" type="Script" id=3]
[ext_resource path="res://ui/TextureProgress.tscn" type="PackedScene" id=4]
[ext_resource path="res://ants/stats.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite-0002:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "horizontal"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/CollisionShape2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite-0002:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "vertical"
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("Area2D/CollisionShape2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite-0002:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[node name="ant" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 1, 1.1131 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 3.0

[node name="Sprite-0002" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/horizontal = SubResource( 3 )
anims/vertical = SubResource( 4 )

[node name="TextureProgress" parent="." instance=ExtResource( 4 )]
max_value = 100.0
value = 100.0

[node name="DeathAnimationTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="stats" parent="." instance=ExtResource( 5 )]

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="Area2D" method="_on_Area2D_area_exited"]
[connection signal="chaos" from="Area2D" to="TextureProgress" method="_on_Area2D_chaos"]
[connection signal="death" from="Area2D" to="." method="_on_Area2D_death"]
[connection signal="health_lose" from="Area2D" to="stats" method="_on_Area2D_health_lose"]
[connection signal="health_not_lose" from="Area2D" to="stats" method="_on_Area2D_health_not_lose"]
[connection signal="timeout" from="Area2D/Timer" to="Area2D" method="_on_Timer_timeout"]
[connection signal="timeout" from="DeathAnimationTimer" to="." method="_on_DeathAnimationTimer_timeout"]
[connection signal="burn" from="stats" to="." method="_on_stats_burn"]
[connection signal="death" from="stats" to="." method="_on_stats_death"]
[connection signal="health_update" from="stats" to="TextureProgress" method="_on_stats_health_update"]
